# try_slack_slash_command

./: .gitignore  README.md  app.py  package-lock.json  package.json  pyproject.toml  serverless.yml  worker.py
.github/workflows/: deploy.yml
