[tool.poetry]
name = "try_slack_slash_command"
version = "0.1.0"
description = ""
authors = ["Haruhiko Takada <haruhiko.takada@gmail.com>"]
license = "Apache-2.0 License"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
slack-sdk = "^3.5.1"
boto3 = "^1.17.72"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
